# 3dssr

./: .env  .gitignore  README.md  app.py  pyproject.toml  server.py  websocketserver.py
logic/: dicom.py
middlewares/: cors.py
models/: colormap.py  preset.py
routes/: routes.py
settings/: globalvars.py  settings.py
